Fix header alignment

--- a/src/_sass/home.scss
+++ b/src/_sass/home.scss
@@ -39,6 +39,10 @@
   cursor: pointer;
 }
 
+.header--menu {
+  position: absolute;
+}
+
 .splash {
   height: 100vh;
   display: flex;
@@ -216,9 +220,14 @@
 }
 
 @media only screen and (max-width: 500px) {
+  .header--menu {
+    position: relative;
+  }
+
   .hamburger-menu {
     display: inline;
   }
+
   .header {
     .mobile-visible {
       display: flex;
@@ -245,7 +254,7 @@
   justify-content: center;
   align-items: center;
   height: 80vh;
-  padding: 20vh 0;
+  padding: 10vh 0;
 
   .header--link {
     display: flex;
@@ -255,7 +264,7 @@
     flex: 1 1 0;
   }
 
-  .hamburger-menu {
+  .header--menu {
     position: absolute;
     top: 0;
     right: 0;
